--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "3rd-party/opscode"]
-	path = 3rd-party/opscode
-	url = git://github.com/opscode/cookbooks.git
+[submodule "3rd-parties/apt"]
+	path = 3rd-parties/apt
+	url = git://github.com/opscode-cookbooks/apt.git
