many improvements on the mconf-monitor recipe, but it's still not finished

--- a/mconf-monitor/templates/default/performance_report.conf
+++ b/mconf-monitor/templates/default/performance_report.conf
@@ -14,21 +14,8 @@ env PIDFILE="/var/run/performance_report.pid"
 env INSTANCE_TYPE="<%= node[:mconf][:instance_type] %>"
 
 script
-    if [ $INSTANCE_TYPE == "nagios" ]
-    then
-        HOST="localhost"
-    else
-        if [ `which bbb-conf | wc -l` -eq 0 ]
-        then
-            HOST=#{node[:ipaddress]}
-        else
-            HOST=`bbb-conf --salt | grep 'URL' | tr -d ' ' | sed 's:URL\:http\://\([^:/]*\).*:\1:g'`
-        fi
-    fi
-
     echo $$ > $PIDFILE
-    
-    PARAMS="start --server <%= node[:mconf][:nagios_address] %> --hostname $HOST --send_rate <%= node[:mconf][:interval] %>"
+    PARAMS="--server <%= node[:mconf][:nagios_address] %> --hostname <%= node[:mconf][:hostname] %> --send_rate <%= node[:mconf][:interval] %>"
     exec sudo -u $USER $APP $PARAMS 2>&1 >> $LOGFILE
 end script
 
