separated the logic of metrics generation of the performance report from the part which sends the data to the server; this way we could send the data to an arbitrary number of servers easily

--- a/mconf-monitor/templates/default/performance_report.conf
+++ b/mconf-monitor/templates/default/performance_report.conf
@@ -8,7 +8,7 @@ stop on shutdown
 respawn
 
 env USER=mconf
-env APP=/var/mconf/tools/nagios/performance_report.py
+env APP=<%= node[:mconf][:nagios][:dir] %>/performance_report.py
 env LOGFILE="<%= node[:mconf][:log][:path] %>/performance_report.log"
 env PIDFILE="/var/run/performance_report.pid"
 env INSTANCE_TYPE="<%= node[:mconf][:instance_type] %>"
@@ -16,7 +16,7 @@ env INSTANCE_TYPE="<%= node[:mconf][:instance_type] %>"
 script
     echo $$ > $PIDFILE
     PARAMS="--server <%= node[:mconf][:nagios_address] %> --hostname <%= node[:mconf][:hostname] %> --send_rate <%= node[:mconf][:interval] %>"
-    exec sudo -u $USER $APP $PARAMS 2>&1 >> $LOGFILE
+    exec sudo -u $USER $APP $PARAMS | <%= node[:mconf][:nagios][:dir] %>/reporter.sh
 end script
 
 pre-start script
