--- a/mconf-monitor/templates/default/performance_report.conf
+++ b/mconf-monitor/templates/default/performance_report.conf
@@ -11,15 +11,16 @@ env USER=mconf
 env APP=<%= node[:mconf][:nagios][:dir] %>/performance_report.py
 env LOGFILE="<%= node[:mconf][:log][:path] %>/performance_report.log"
 env PIDFILE="/var/run/performance_report.pid"
-env INSTANCE_TYPE="<%= node[:mconf][:instance_type] %>"
+env PARAMS="--hostname <%= node[:mconf][:hostname] %> --send_rate <%= node[:mconf][:interval] %>"
 
 script
     echo $$ > $PIDFILE
-    PARAMS="--server <%= node[:mconf][:nagios_address] %> --hostname <%= node[:mconf][:hostname] %> --send_rate <%= node[:mconf][:interval] %>"
+#    exec sudo -u $USER $APP $PARAMS 2>&1 >> $LOGFILE
     exec sudo -u $USER $APP $PARAMS | <%= node[:mconf][:nagios][:dir] %>/reporter.sh
 end script
 
 pre-start script
+    sudo mkdir -p <%= node[:mconf][:log][:path] %>
     # Date format same as (new Date()).toISOString() for consistency
     echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Starting" >> $LOGFILE
 end script
