the recipe live-notes-server is fully functional now

--- a/live-notes-server/templates/default/live-notes-server.conf
+++ b/live-notes-server/templates/default/live-notes-server.conf
@@ -15,7 +15,7 @@ env PIDFILE="/var/run/live-notes-server.pid"
 
 script
   echo $$ > $PIDFILE
-  exec sudo -u $USER $APP 2>&1 >> $LOGFILE
+  exec sudo -u $USER $APP >> $LOGFILE 2>&1
 end script
 
 pre-start script
