--- a/mconf-monitor/templates/default/performance_report.conf
+++ b/mconf-monitor/templates/default/performance_report.conf
@@ -15,8 +15,7 @@ env PARAMS="--hostname <%= node[:mconf][:hostname] %> --send_rate <%= node[:mcon
 
 script
     echo $$ > $PIDFILE
-#    exec sudo -u $USER $APP $PARAMS 2>&1 >> $LOGFILE
-    exec sudo -u $USER $APP $PARAMS | <%= node[:mconf][:nagios][:dir] %>/reporter.sh
+    exec sudo -u $USER $APP $PARAMS 2>> $LOGFILE | <%= node[:mconf][:nagios][:dir] %>/reporter.sh >> $LOGFILE 2>&1
 end script
 
 pre-start script
@@ -29,3 +28,4 @@ pre-stop script
     rm $PIDFILE
     echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Stopping" >> $LOGFILE
 end script
+
