full set of recipes working for update a mconf-node installed through the old installation script, now they will be tested to setup a new mconf-node from scratch

--- a/mconf-monitor/templates/default/performance_report.conf
+++ b/mconf-monitor/templates/default/performance_report.conf
@@ -8,8 +8,8 @@ stop on shutdown
 respawn
 
 env USER=mconf
-env APP=<%= node[:mconf][:nagios][:dir] %>/performance_report.py
-env LOGFILE="<%= node[:mconf][:log][:path] %>/performance_report.log"
+env APP="<%= node[:mconf][:nagios][:dir] %>/performance_report.py"
+env LOGFILE="<%= node[:mconf][:log][:dir] %>/performance_report.log"
 env PIDFILE="/var/run/performance_report.pid"
 env PARAMS="--hostname <%= node[:mconf][:hostname] %> --send_rate <%= node[:mconf][:interval] %>"
 
@@ -19,7 +19,6 @@ script
 end script
 
 pre-start script
-    sudo mkdir -p <%= node[:mconf][:log][:path] %>
     # Date format same as (new Date()).toISOString() for consistency
     echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Starting" >> $LOGFILE
 end script
