moving all the recipes to /cookbooks/

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "3rd-parties/ruby-1.9.2"]
 	path = 3rd-parties/ruby-1.9.2
 	url = git://github.com/karlfreeman/chef-ruby.git
+[submodule "cookbooks/apt"]
+	path = cookbooks/apt
+	url = git://github.com/opscode-cookbooks/apt.git
+[submodule "cookbooks/build-essential"]
+	path = cookbooks/build-essential
+	url = git://github.com/opscode-cookbooks/build-essential.git
+[submodule "cookbooks/ruby-1.9.2"]
+	path = cookbooks/ruby-1.9.2
+	url = git://github.com/karlfreeman/chef-ruby.git
