include the chef-client recipe to set the interval between two executions (fixes #499); starts the live-notes-server on every execution - it will guarantee that the live notes server starts when it gets installed (fixes #505); still needs to be tested with the chef-server before the update on the network

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "cookbooks/ruby-1.9.2"]
 	path = cookbooks/ruby-1.9.2
 	url = git://github.com/karlfreeman/chef-ruby.git
+[submodule "cookbooks/chef-client"]
+	path = cookbooks/chef-client
+	url = git://github.com/opscode-cookbooks/chef-client.git
