nagios nsca was moved from mconf-monitor to an independent recipe; implemented the nsca handler to send the run status of the chef client to the nagios server; use an unified list of nsca servers for the nsca handler and the mconf monitoring system

--- a/cookbooks/mconf-monitor/templates/default/performance_report.conf
+++ b/cookbooks/mconf-monitor/templates/default/performance_report.conf
@@ -11,11 +11,11 @@ env USER=mconf
 env APP="<%= node[:mconf][:nagios][:dir] %>/performance_report.py"
 env LOGFILE="<%= node[:mconf][:log][:dir] %>/performance_report.log"
 env PIDFILE="/var/run/performance_report.pid"
-env PARAMS="--hostname <%= node[:mconf][:hostname] %> --send_rate <%= node[:mconf][:interval] %>"
+env PARAMS="--hostname <%= node[:nsca][:hostname] %> --send_rate <%= node[:mconf][:interval] %>"
 
 script
     echo $$ > $PIDFILE
-    exec sudo -u $USER $APP $PARAMS 2>> $LOGFILE | <%= node[:mconf][:nagios][:dir] %>/reporter.sh >> $LOGFILE 2>&1
+    exec sudo -u $USER $APP $PARAMS 2>> $LOGFILE | sudo -u $USER <%= node[:mconf][:nagios][:dir] %>/reporter.sh >> $LOGFILE 2>&1
 end script
 
 pre-start script
